--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,13 +19,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
+        go-version: '1.22.1'
     - name: Install dependencies
       run: |
-        go get github.com/BurntSushi/toml
-        go get github.com/gdamore/tcell/v2
-        go get github.com/ncruces/zenity
-        go get github.com/rivo/tview
+        go mod tidy
 
     - name: Build
       run: GOOS=windows GOARCH=amd64 go build -v ./...
